--- a/skolyoz-uygulamasi.html
+++ b/skolyoz-uygulamasi.html
@@ -1,24 +1,44 @@
-
 <!DOCTYPE html>
 <html lang="tr">
 <head>
   <meta charset="UTF-8">
   <title>Skolyoz Açısını Tespit Et</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/pose"></script>
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils"></script>
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils"></script>
   <style>
-    body { text-align: center; font-family: sans-serif; direction: ltr; }
-    video, canvas { width: 100%; max-width: 360px; border: 1px solid gray; margin: 10px auto; }
-    #result, #exercise { margin-top: 20px; }
+    body { background-color: #f8f9fa; }
+    video, canvas {
+      max-width: 100%;
+      border: 2px solid #198754;
+      border-radius: 10px;
+      margin-top: 15px;
+    }
+    #result {
+      font-size: 1.2rem;
+      font-weight: bold;
+      margin-top: 20px;
+      color: #333;
+    }
+    #exercise {
+      margin-top: 10px;
+      font-size: 1rem;
+      color: #0d6efd;
+    }
   </style>
 </head>
 <body>
-  <h2>📷 Skolyoz Açısı Tespit Uygulaması</h2>
-  <video id="video" autoplay></video>
-  <canvas id="canvas"></canvas>
-  <p id="result">Açı hesaplanıyor...</p>
-  <div id="exercise"></div>
+  <div class="container text-center py-4">
+    <h2 class="mb-4 text-success">📷 Skolyoz Açısı Tespit Uygulaması</h2>
+
+    <video id="video" autoplay playsinline class="shadow-sm"></video>
+    <canvas id="canvas"></canvas>
+
+    <p id="result">Açı hesaplanıyor...</p>
+    <div id="exercise"></div>
+  </div>
 
   <script>
     const video = document.getElementById('video');
@@ -41,11 +61,11 @@
         result.textContent = `Omurga eğim açısı: ${angle} derece`;
 
         let msg = '';
-        if (angle < 10) msg = 'Egzersiz: Hafif esneme, diyafram nefesi';
-        else if (angle < 25) msg = 'Egzersiz: Plank, yan germe';
+        if (angle < 10) msg = '🧘‍♀️ Egzersiz: Hafif esneme, diyafram nefesi';
+        else if (angle < 25) msg = '💪 Egzersiz: Plank, yan germe (side stretch)';
         else msg = '⚠️ Açı yüksek! Fizyoterapiste danışın.';
 
-        exercise.textContent = msg;
+        exercise.innerHTML = msg;
       }
     });
 
