--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
+
 <!DOCTYPE html>
 <html lang="tr">
 <head>
   <meta charset="UTF-8">
-  <title>Skolyoz Açısını Tespit Et</title>
+  <title>Skolyoz Açısı Tespit Et</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/pose"></script>
@@ -26,6 +27,12 @@
       margin-top: 10px;
       font-size: 1rem;
       color: #0d6efd;
+    }
+    #exercise img {
+      margin-top: 10px;
+      max-width: 100%;
+      border-radius: 10px;
+      border: 1px solid #ccc;
     }
   </style>
 </head>
@@ -61,11 +68,19 @@
         result.textContent = `Omurga eğim açısı: ${angle} derece`;
 
         let msg = '';
-        if (angle < 10) msg = '🧘‍♀️ Egzersiz: Hafif esneme, diyafram nefesi';
-        else if (angle < 25) msg = '💪 Egzersiz: Plank, yan germe (side stretch)';
-        else msg = '⚠️ Açı yüksek! Fizyoterapiste danışın.';
+        let img = '';
+        if (angle < 10) {
+          msg = '🧘‍♀️ Egzersiz: Hafif esneme, diyafram nefesi';
+          img = 'https://i.imgur.com/zDTM0X4.png';
+        } else if (angle < 25) {
+          msg = '💪 Egzersiz: Plank, yan germe (side stretch)';
+          img = 'https://i.imgur.com/xr5yoZJ.png';
+        } else {
+          msg = '⚠️ Açı yüksek! Fizyoterapiste danışın.';
+          img = 'https://i.imgur.com/Cl8jl6U.png';
+        }
 
-        exercise.innerHTML = msg;
+        exercise.innerHTML = `${msg}<br><img src="${img}" alt="Egzersiz görseli">`;
       }
     });
 
