--- a/skolyoz-upload.html
+++ b/skolyoz-upload.html
@@ -3,106 +3,79 @@
 <html lang="tr">
 <head>
   <meta charset="UTF-8">
-  <title>Skolyoz Açısı - Fotoğraf ile Tespit</title>
+  <title>Skolyoz Açısı Hesaplama</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/pose"></script>
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils"></script>
   <style>
-    body { background-color: #f8f9fa; }
-    #uploadedImage {
-      display: block;
-      margin: 15px auto;
-      max-width: 100%;
-      border: 2px solid #198754;
-      border-radius: 10px;
-    }
-    #result {
-      font-size: 1.2rem;
-      font-weight: bold;
-      margin-top: 20px;
-      color: #333;
-    }
-    #exercise {
-      margin-top: 10px;
-      font-size: 1rem;
-      color: #0d6efd;
-    }
-    #exercise img {
-      margin-top: 10px;
-      max-width: 100%;
-      border-radius: 10px;
-      border: 1px solid #ccc;
-    }
+    body { background-color: #f8f9fa; padding: 2rem; }
+    #uploadedImage, canvas { display: block; margin: 1rem auto; max-width: 100%; border: 2px solid #198754; border-radius: 8px; }
+    #result { font-size: 1.3rem; font-weight: bold; color: #198754; text-align: center; margin-top: 1rem; }
+    #exercise { text-align: center; margin-top: 1rem; font-size: 1rem; }
+    #exercise img { max-width: 300px; margin-top: 1rem; border-radius: 10px; }
   </style>
 </head>
 <body>
-  <div class="container text-center py-4">
-    <h2 class="mb-4 text-success">📷 Fotoğraf ile Skolyoz Açısı Tespiti</h2>
-    <input type="file" id="imageUpload" accept="image/*" class="form-control mb-3" />
-    <img id="uploadedImage" style="display:none;" />
-    <canvas id="canvas" class="d-block mx-auto"></canvas>
+  <div class="container text-center">
+    <h2 class="text-success mb-4">📐 Skolyoz Açısı Tespit Uygulaması</h2>
+    <input type="file" id="upload" accept="image/*" class="form-control mb-3">
+    <img id="uploadedImage" style="display:none;">
+    <canvas id="canvas"></canvas>
     <p id="result">Henüz analiz yapılmadı.</p>
     <div id="exercise"></div>
   </div>
 
   <script>
-    const imageUpload = document.getElementById('imageUpload');
-    const uploadedImage = document.getElementById('uploadedImage');
-    const canvas = document.getElementById('canvas');
-    const ctx = canvas.getContext('2d');
-    const result = document.getElementById('result');
-    const exercise = document.getElementById('exercise');
+    const up = document.getElementById('upload'), img = document.getElementById('uploadedImage'),
+          canvas = document.getElementById('canvas'), ctx = canvas.getContext('2d'),
+          res = document.getElementById('result'), ex = document.getElementById('exercise');
 
-    const pose = new Pose.Pose({ locateFile: (file) => `https://cdn.jsdelivr.net/npm/@mediapipe/pose/${file}` });
+    const pose = new Pose.Pose({ locateFile: f => `https://cdn.jsdelivr.net/npm/@mediapipe/pose/${f}` });
     pose.setOptions({ modelComplexity: 1, minDetectionConfidence: 0.5, minTrackingConfidence: 0.5 });
+
     pose.onResults(results => {
       ctx.clearRect(0, 0, canvas.width, canvas.height);
       if (results.poseLandmarks) {
-        drawConnectors(ctx, results.poseLandmarks, Pose.POSE_CONNECTIONS, { color: '#00FF00', lineWidth: 2 });
-        drawLandmarks(ctx, results.poseLandmarks, { color: '#FF0000', lineWidth: 1 });
-        const l = results.poseLandmarks[11];
-        const r = results.poseLandmarks[12];
-        const dx = r.x - l.x;
-        const dy = r.y - l.y;
+        const l = results.poseLandmarks[11], r = results.poseLandmarks[12];
+        const dx = r.x - l.x, dy = r.y - l.y;
         const angle = Math.abs(Math.atan2(dy, dx) * 180 / Math.PI).toFixed(1);
-        result.textContent = `Omurga eğim açısı: ${angle} derece`;
-
-        let msg = '', img = '';
+        res.textContent = `Omuz açısı: ${angle}°`;
+        drawConnectors(ctx, results.poseLandmarks, Pose.POSE_CONNECTIONS, {color:'#00FF00',lineWidth:2});
+        drawLandmarks(ctx, results.poseLandmarks, {color:'#FF0000',lineWidth:2});
+        let msg='', im='';
         if (angle < 10) {
-          msg = '🧘‍♀️ Egzersiz: Hafif esneme, diyafram nefesi';
-          img = 'https://i.imgur.com/zDTM0X4.png';
+          msg = '🟢 Hafif eğim – Esneme hareketleri yeterli olabilir.';
+          im = 'https://i.imgur.com/zDTM0X4.png';
         } else if (angle < 25) {
-          msg = '💪 Egzersiz: Plank, yan germe (side stretch)';
-          img = 'https://i.imgur.com/xr5yoZJ.png';
+          msg = '🟠 Orta düzey skolyoz – Fizyoterapi egzersizleri önerilir.';
+          im = 'https://i.imgur.com/xr5yoZJ.png';
         } else {
-          msg = '⚠️ Açı yüksek! Fizyoterapiste danışın.';
-          img = 'https://i.imgur.com/Cl8jl6U.png';
+          msg = '🔴 Ciddi skolyoz! Mutlaka uzmana başvurun.';
+          im = 'https://i.imgur.com/Cl8jl6U.png';
         }
-
-        exercise.innerHTML = `${msg}<br><img src="${img}" alt="Egzersiz görseli">`;
+        ex.innerHTML = `<p>${msg}</p><img src="${im}" alt="Egzersiz önerisi">`;
       } else {
-        result.textContent = 'Vücut tespit edilemedi. Lütfen düzgün bir fotoğraf yükleyin.';
+        res.textContent = "Vücut algılanamadı.";
       }
     });
 
-    imageUpload.addEventListener('change', (event) => {
-      const file = event.target.files[0];
+    up.onchange = e => {
+      const file = e.target.files[0];
       if (!file) return;
-
       const reader = new FileReader();
-      reader.onload = (e) => {
-        uploadedImage.src = e.target.result;
-        uploadedImage.style.display = 'block';
-        uploadedImage.onload = () => {
-          canvas.width = uploadedImage.width;
-          canvas.height = uploadedImage.height;
-          ctx.drawImage(uploadedImage, 0, 0);
-          pose.send({ image: uploadedImage });
+      reader.onload = ev => {
+        img.src = ev.target.result;
+        img.onload = () => {
+          img.style.display = '';
+          canvas.width = img.naturalWidth;
+          canvas.height = img.naturalHeight;
+          ctx.drawImage(img, 0, 0);
+          pose.send({ image: img });
         };
       };
       reader.readAsDataURL(file);
-    });
+    };
   </script>
 </body>
 </html>
