--- a/index.html
+++ b/index.html
@@ -1,95 +1,7 @@
-
 <!DOCTYPE html>
-<html lang="tr">
-<head>
-  <meta charset="UTF-8">
-  <title>Skolyoz Açısı Tespit Et</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/pose"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils"></script>
-  <style>
-    body { background-color: #f8f9fa; }
-    video, canvas {
-      max-width: 100%;
-      border: 2px solid #198754;
-      border-radius: 10px;
-      margin-top: 15px;
-    }
-    #result {
-      font-size: 1.2rem;
-      font-weight: bold;
-      margin-top: 20px;
-      color: #333;
-    }
-    #exercise {
-      margin-top: 10px;
-      font-size: 1rem;
-      color: #0d6efd;
-    }
-    #exercise img {
-      margin-top: 10px;
-      max-width: 100%;
-      border-radius: 10px;
-      border: 1px solid #ccc;
-    }
-  </style>
-</head>
-<body>
-  <div class="container text-center py-4">
-    <h2 class="mb-4 text-success">📷 Skolyoz Açısı Tespit Uygulaması</h2>
-
-    <video id="video" autoplay playsinline class="shadow-sm"></video>
-    <canvas id="canvas"></canvas>
-
-    <p id="result">Açı hesaplanıyor...</p>
-    <div id="exercise"></div>
-  </div>
-
-  <script>
-    const video = document.getElementById('video');
-    const canvas = document.getElementById('canvas');
-    const ctx = canvas.getContext('2d');
-    const result = document.getElementById('result');
-    const exercise = document.getElementById('exercise');
-
-    const pose = new Pose.Pose({ locateFile: (file) => `https://cdn.jsdelivr.net/npm/@mediapipe/pose/${file}` });
-    pose.setOptions({ modelComplexity: 1, minDetectionConfidence: 0.5, minTrackingConfidence: 0.5 });
-
-    pose.onResults(results => {
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
-      if (results.poseLandmarks) {
-        const l = results.poseLandmarks[11];
-        const r = results.poseLandmarks[12];
-        const dx = r.x - l.x;
-        const dy = r.y - l.y;
-        const angle = Math.abs(Math.atan2(dy, dx) * 180 / Math.PI).toFixed(1);
-        result.textContent = `Omurga eğim açısı: ${angle} derece`;
-
-        let msg = '';
-        let img = '';
-        if (angle < 10) {
-          msg = '🧘‍♀️ Egzersiz: Hafif esneme, diyafram nefesi';
-          img = 'https://i.imgur.com/zDTM0X4.png';
-        } else if (angle < 25) {
-          msg = '💪 Egzersiz: Plank, yan germe (side stretch)';
-          img = 'https://i.imgur.com/xr5yoZJ.png';
-        } else {
-          msg = '⚠️ Açı yüksek! Fizyoterapiste danışın.';
-          img = 'https://i.imgur.com/Cl8jl6U.png';
-        }
-
-        exercise.innerHTML = `${msg}<br><img src="${img}" alt="Egzersiz görseli">`;
-      }
-    });
-
-    const camera = new Camera(video, {
-      onFrame: async () => { await pose.send({ image: video }); },
-      width: 360,
-      height: 480
-    });
-    camera.start();
-  </script>
-</body>
+<html>
+  <head>
+    <meta http-equiv="refresh" content="0; url=skolyoz-upload.html" />
+  </head>
+  <body></body>
 </html>
