--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="fa">
+<html lang="tr">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>تشخیص زاویه اسکولیوز</title>
+  <title>Skolyoz Açısı Tespit Et</title>
   <link rel="manifest" href="manifest.json">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/pose"></script>
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils"></script>
   <style>
-    body { background-color: #f8f9fa; padding: 2rem; direction: rtl; }
+    body { background-color: #f8f9fa; padding: 2rem; }
     #uploadedImage, canvas {
       display: block;
       margin: 1rem auto;
@@ -38,58 +38,70 @@
 </head>
 <body>
   <div class="container text-center">
-    <h2 class="text-success mb-4">📐 تشخیص زاویه اسکولیوز با عکس</h2>
+    <h2 class="text-success mb-4">📐 Skolyoz Açısı Tespit Uygulaması</h2>
     <input type="file" id="upload" accept="image/*" class="form-control mb-3">
     <img id="uploadedImage" style="display:none;">
     <canvas id="canvas"></canvas>
-    <p id="result">هنوز عکسی آپلود نشده.</p>
+    <p id="result">Henüz analiz yapılmadı.</p>
     <div id="exercise"></div>
   </div>
 
   <script>
-    const up = document.getElementById('upload'),
+    const upload = document.getElementById('upload'),
           img = document.getElementById('uploadedImage'),
           canvas = document.getElementById('canvas'),
           ctx = canvas.getContext('2d'),
-          res = document.getElementById('result'),
-          ex = document.getElementById('exercise');
+          result = document.getElementById('result'),
+          exercise = document.getElementById('exercise');
 
-    const pose = new Pose.Pose({ locateFile: f => `https://cdn.jsdelivr.net/npm/@mediapipe/pose/${f}` });
-    pose.setOptions({ modelComplexity: 1, minDetectionConfidence: 0.5, minTrackingConfidence: 0.5 });
+    const pose = new Pose.Pose({
+      locateFile: (file) => `https://cdn.jsdelivr.net/npm/@mediapipe/pose/${file}`
+    });
+
+    pose.setOptions({
+      modelComplexity: 1,
+      minDetectionConfidence: 0.5,
+      minTrackingConfidence: 0.5
+    });
 
     pose.onResults(results => {
       ctx.clearRect(0, 0, canvas.width, canvas.height);
       if (results.poseLandmarks) {
-        const l = results.poseLandmarks[11], r = results.poseLandmarks[12];
-        const dx = r.x - l.x, dy = r.y - l.y;
+        const l = results.poseLandmarks[11];
+        const r = results.poseLandmarks[12];
+        const dx = r.x - l.x;
+        const dy = r.y - l.y;
         const angle = Math.abs(Math.atan2(dy, dx) * 180 / Math.PI).toFixed(1);
-        res.textContent = `زاویه شانه‌ها: ${angle} درجه`;
 
-        drawConnectors(ctx, results.poseLandmarks, Pose.POSE_CONNECTIONS, {color:'#00FF00',lineWidth:2});
-        drawLandmarks(ctx, results.poseLandmarks, {color:'#FF0000',lineWidth:2});
+        result.textContent = `Omuz Açısı: ${angle}°`;
 
-        let msg = '', im = '';
+        drawConnectors(ctx, results.poseLandmarks, Pose.POSE_CONNECTIONS, {color:'#00FF00', lineWidth:2});
+        drawLandmarks(ctx, results.poseLandmarks, {color:'#FF0000', lineWidth:2});
+
+        let msg = '', imgUrl = '';
         if (angle < 10) {
-          msg = '🟢 خفیف – حرکات کششی سبک کافی‌ست.';
-          im = 'https://i.imgur.com/zDTM0X4.png';
+          msg = '🟢 Hafif eğim – Germe egzersizleri yeterli olabilir.';
+          imgUrl = 'https://i.imgur.com/zDTM0X4.png';
         } else if (angle < 25) {
-          msg = '🟠 متوسط – تمرینات فیزیوتراپی توصیه می‌شود.';
-          im = 'https://i.imgur.com/xr5yoZJ.png';
+          msg = '🟠 Orta derece skolyoz – Fizyoterapi önerilir.';
+          imgUrl = 'https://i.imgur.com/xr5yoZJ.png';
         } else {
-          msg = '🔴 شدید – لطفاً به پزشک متخصص مراجعه کنید.';
-          im = 'https://i.imgur.com/Cl8jl6U.png';
+          msg = '🔴 Ciddi skolyoz! Uzman desteği alın.';
+          imgUrl = 'https://i.imgur.com/Cl8jl6U.png';
         }
-        ex.innerHTML = `<p>${msg}</p><img src="${im}" alt="تمرین پیشنهادی">`;
+
+        exercise.innerHTML = `<p>${msg}</p><img src="${imgUrl}" alt="Egzersiz">`;
       } else {
-        res.textContent = "بدن شناسایی نشد.";
+        result.textContent = "Vücut algılanamadı.";
       }
     });
 
-    up.onchange = e => {
+    upload.onchange = (e) => {
       const file = e.target.files[0];
       if (!file) return;
+
       const reader = new FileReader();
-      reader.onload = ev => {
+      reader.onload = (ev) => {
         img.src = ev.target.result;
         img.onload = () => {
           img.style.display = '';
@@ -106,8 +118,8 @@
   <script>
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('service-worker.js')
-        .then(reg => console.log("✔ سرویس‌ورکر فعال شد"))
-        .catch(err => console.error("❌ خطا در سرویس‌ورکر", err));
+        .then(reg => console.log("✅ Service Worker kaydedildi", reg))
+        .catch(err => console.error("❌ Service Worker hatası", err));
     }
   </script>
 </body>
